--- a/src/android/AndroidManifest.xml
+++ b/src/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest android:versionCode="1" package="org.TuxamitoSoftware.SimpleTaskManager" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.0">
-    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:icon="@drawable/icon" android:label="@string/app_name">
+<manifest android:versionCode="1" package="org.qtproject.example.SimpleTaskManager" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0">
+    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="@string/app_name">
         <activity android:name="org.qtproject.qt5.android.bindings.QtActivity" android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden|navigation" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -32,4 +32,6 @@
         </activity>
     </application>
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
